--- a/CS4400/CS4400.csproj
+++ b/CS4400/CS4400.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BagDropoff.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BagDropoff.Designer.cs">
+      <DependentUpon>BagDropoff.cs</DependentUpon>
+    </Compile>
     <Compile Include="BagList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchClientList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SearchClientList.Designer.cs">
+      <DependentUpon>SearchClientList.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="BagDropoff.resx">
+      <DependentUpon>BagDropoff.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BagList.resx">
       <DependentUpon>BagList.cs</DependentUpon>
     </EmbeddedResource>
@@ -100,6 +115,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SearchClientList.resx">
+      <DependentUpon>SearchClientList.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
