Monthly Ser Report 1

--- a/CS4400/CS4400.csproj
+++ b/CS4400/CS4400.csproj
@@ -63,11 +63,11 @@
     <Compile Include="FamilyMembers.Designer.cs">
       <DependentUpon>FamilyMembers.cs</DependentUpon>
     </Compile>
-    <Compile Include="ServiceReport.cs">
+    <Compile Include="MonthlyServiceReport.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ServiceReport.Designer.cs">
-      <DependentUpon>ServiceReport.cs</DependentUpon>
+    <Compile Include="MonthlyServiceReport.Designer.cs">
+      <DependentUpon>MonthlyServiceReport.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -161,8 +161,8 @@
     <EmbeddedResource Include="SearchClientList.resx">
       <DependentUpon>SearchClientList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ServiceReport.resx">
-      <DependentUpon>ServiceReport.cs</DependentUpon>
+    <EmbeddedResource Include="MonthlyServiceReport.resx">
+      <DependentUpon>MonthlyServiceReport.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
