--- a/CS4400/CS4400.csproj
+++ b/CS4400/CS4400.csproj
@@ -69,7 +69,7 @@
     <Compile Include="NewProduct.Designer.cs">
       <DependentUpon>NewProduct.cs</DependentUpon>
     </Compile>
-    <Compile Include="MonthlyServiceReport.cs">
+    <Compile Include="GroceryList.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GroceryList.Designer.cs">
